# Data-Pilot

./: .gitignore  GEMINI.md  app_css.txt  app_screen1.txt  context.md  convert.py  convert_upload.py  extract.py  fix_jsx.py  fun.py  functions.py  landing_body.txt  landing_css.txt  phases.md  pyproject.toml  theme.md
app/: main.py
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: analysis.py  data_preview.py  delete_data.py  planner.py  upload.py
backend/app/config/: configs.py
backend/app/models/: plan.py
backend/app/services/: analysis.py  llm_service.py  planner.py
frontend/: app.html  landing4.html  package-lock.json  package.json  tailwind.config.js
frontend/prototypes/: 01-retro-terminal.html  02-luxury-editorial.html  03-ethereal-glass.html  app3.html  implementation.md  landing.html  landing2.html  landing3.html
frontend/src/: App.tsx  DatasetContext.tsx  index.css
frontend/src/components/layout/: Navbar.tsx
frontend/src/pages/: Analyze.tsx  Execute.tsx  Landing.tsx  Plan.tsx  Results.tsx  Upload.tsx
frontend/src/services/: api.ts
