[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.8",
    "janitor>=0.1.1",
    "langchain>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.39.0",
]
